# SparksMatter

./: AgentsSystemMessage.py  AgentsTools.py  README.md  launch_SparksMatter.ipynb  pseudopotentials_with_ids_energies.json
SparksMatter/: AgentsCreation.py
SparksMatter/mattergen/: pyproject.toml
cgcnn/: test_results.csv
cgcnn/data/: mp-2534.cif
