[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = [
    "mattergen",
]

[project]
name = "mattergen"
version = "1.0"
requires-python = ">= 3.10"


[tool.setuptools.packages.find]
include = ["mattergen*"]


[[tool.uv.index]]
name = "pytorch_linux"
url = "https://download.pytorch.org/whl/cu118"
explicit = true


[project.scripts]
mattergen-generate = "mattergen.scripts.generate:_main"
mattergen-train = "mattergen.scripts.run:mattergen_main"
mattergen-finetune = "mattergen.scripts.finetune:mattergen_finetune"
mattergen-evaluate = "mattergen.scripts.evaluate:_main"
csv-to-dataset = "mattergen.scripts.csv_to_dataset:main"
